correcting focus areas layout across viewports to show four on desktop, two on tablet and one on mobile

--- a/opentech/static_src/src/sass/public/components/_focus-area.scss
+++ b/opentech/static_src/src/sass/public/components/_focus-area.scss
@@ -2,12 +2,10 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 380px;
-    padding: 40px 30px;
+    padding: 30px;
     border: 1px solid $color--mid-grey;
 
     &__icon {
-        height: 50px;
         margin-bottom: 30px;
         stroke: $color--mint;
     }
